# C-S_ArchitectureNetworkProgramming

./: CMakeLists.txt  README.md  diagnose_crc.py  run_test.bat  test_invalid_packets.py
docs/: architecture.md  implementation.md  protocol.md  testing.md
src/client/: CMakeLists.txt  client_controller.cpp  client_controller.hpp  client_window.cpp  client_window.hpp  main.cpp
src/common/: CMakeLists.txt  crc16.cpp  crc16.hpp  logger.cpp  logger.hpp  protocol.cpp  protocol.hpp
src/server/: CMakeLists.txt  connection_model.cpp  connection_model.hpp  listener.cpp  listener.hpp  main.cpp  server_runtime.hpp  server_window.cpp  server_window.hpp  session_worker.cpp  session_worker.hpp
